--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
       margin: 0;
       padding: 0;
       background-color: #87CEEB;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       overflow: hidden;
     }
     #game-container {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
     }
-  </style>
+  </style>  
 </head>
 <body>
   <div id="game-container"></div>
