--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
     <!-- Include your scene files -->
     <script src="js/scenes/BootScene.js"></script>
+    <script src="js/scenes/TitleScene.js"></script>
     <script src="js/scenes/GameScene.js"></script>
     <script src="js/scenes/Level2Scene.js"></script>
     <script src="js/scenes/Level3Scene.js"></script>
