--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hotdog Adventure</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
-    <!-- Include your scene files -->
-    <script src="js/scenes/BootScene.js"></script>
-    <script src="js/scenes/TitleScene.js"></script>
-    <script src="js/scenes/GameScene.js"></script>
-    <script src="js/scenes/Level2Scene.js"></script>
-    <script src="js/scenes/Level3Scene.js"></script>
-    <script src="js/scenes/Level4Scene.js"></script>
-    <script src="js/scenes/Level5Scene.js"></script>
-    <script src="js/scenes/VictoryScene.js"></script>
-    <script src="js/game.js"></script>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: #87ceeb;
-        overflow: hidden;
-      }
-      #game-container {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="game-container"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Hotdog Adventure</title>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
+  <script type="module" src="js/game.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #87ceeb;
+      overflow: hidden;
+    }
+    #game-container {
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
+</head>
+<body>
+  <div id="game-container"></div>
+</body>
 </html>
